# miniprojeto2

./: .gitignore  pyproject.toml
notebooks/: 1-eda.ipynb  2-feature-extraction-and-modelling.ipynb
