[project]
name = "miniprojeto2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "streamlit>=1.44.1",
    "tensorflow>=2.19.0",
]
